--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-	<link rel="stylesheet" href="css-bs.css">
+	<link rel="stylesheet" href="./css/css.css">
         <title>POOP</title>
     </head>
     <body>
