--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
 	<link rel="stylesheet" href="css/css.css">
-        <title>POOP</title>
+        <title>Sam Davy's Portfolio</title>
     </head>
     <body>
-	<h1>TEST TEST</h1>
-        <p>DUMB POO POO.</p>
+	<h1>Sam Davy's Portfolio</h1>
+        <p>This is my portfolio.</p>
     </body>
 </html>
