--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="css/css.css">
 		<title>Sam Davy's Portfolio</title>
 
-		// Three JS Stuff
+		<! -- Three JS Stuff -->
 		<script src="libs/three.min.js"></script>
 		<style>
 			html, body { margin: 0; padding: 0; overflow: hidden; }
@@ -14,7 +14,7 @@
 		<h1>Sam Davy's Portfolio</h1>
 		<p>This is my portfolio.</p>
 
-		// Three JS Stuff
+		<! -- Three JS Stuff -->
 		<script>
 			// vars
 			var num = 30;
