--- a/index.html
+++ b/index.html
@@ -1,47 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 	<head>
 		<link rel="stylesheet" href="css/css.css">
 		<title>Sam Davy's Portfolio</title>
-
-		<! -- Three JS Stuff -->
-		<script src="libs/three.min.js"></script>
-		<style>
-			html, body { margin: 0; padding: 0; overflow: hidden; }
-		</style>
+		<script src="js/cube.js"></script>
 	</head>
 	<body>
 		<h1>Sam Davy's Portfolio</h1>
 		<p>This is my portfolio.</p>
-
-		<! -- Three JS Stuff -->
-		<script>
-			// vars
-			var num = 30;
-			var objects = [];
-			var raycaster = new THREE.Raycaster();
-			var mouse = new THREE.Vector2();
-			var light,t;
-
-			// create camera
-			var camera = new THREE.PerspectiveCamera(65, window.innerWidth / window.innerHeight, 0.1, 1000);
-			camera.position.set(0.0, 0.0, 5);
-
-			// create a scene
-			var scene = new THREE.Scene();
-
-			// create renderer
-			var renderer = new THREE.WebGLRenderer({antialias:true});
-			renderer.setSize(window.innerWidth, window.innerHeight);
-			document.body.appendChild(renderer.domElement);
-
-			// create spotlight
-			light = new THREE.SpotLight(0xccddff, .8);
-			light.position.set(0, 0, 5);
-			scene.add(light);
-
-			// start animation loop
-			animate();
-		</script>
 	</body>
 </html>
