--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <html>
 	<head>
-		<link rel="stylesheet" href="css/css.css">
+		<link rel="stylesheet" href="css/main.css">
 		<title>Sam Davy's Portfolio</title>
-		<script src="js/cube.js"></script>
 	</head>
 	<body>
 		<h1>Sam Davy's Portfolio</h1>
 		<p>This is my portfolio.</p>
-		<canvas id "c"></canvas>
 	</body>
 </html>
